# django-generic-flatblocks

./: .coveragerc  .env  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
blocks/: models.py
blocks/templates/blocks/title/: flatblock.html
blocks/templates/blocks/titleandtext/: flatblock.html
django_generic_flatblocks/: admin.py  models.py  settings.py
django_generic_flatblocks/contrib/gblocks/: admin.py  models.py  settings.py
django_generic_flatblocks/contrib/gblocks/migrations/: 0001_initial.py
django_generic_flatblocks/locale/de/LC_MESSAGES/: django.mo  django.po
django_generic_flatblocks/migrations/: 0001_initial.py
django_generic_flatblocks/templatetags/: generic_flatblocks.py
django_generic_flatblocks/tests/: __init__.py  settings.py  test_flatblocks.py
django_generic_flatblocks/tests/templates/: test_template.html
django_generic_flatblocks/tests/testapp/: settings.py
docs/: Makefile  changelog.rst  conf.py  configuration.rst  contributed_nodes.rst  creating_nodes.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/ref/: contributed_nodes.rst  creating_nodes.rst  usage.rst
example_project/: manage.py  settings.py  urls.py
example_project/templates/: 500.html  current_user.html  example.html  image_node.html  red_object.html  urgent.html
generic_flatblocks/: admin.py  models.py
generic_flatblocks/templates/genericflatblocks/: default.html
generic_flatblocks/templatetags/: gblocks.py  genericflatblocks_tags.py
(+16 files in other folders)
