[metadata]
name = django-generic-flatblocks
version = 1.3
description =
    A flatpages/flatblock application using generic relations to content models.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-generic-flatblocks
keywords = django, snippets, text, models, flatblock, flatpages
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = '>=2.7'
install_requires =
    django>=1.8
    pillow

[isort]
known_first_party = django_generic_flatblocks
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = django_generic_flatblocks
branch = True
omit =
    django_generic_flatblocks/migrations/*
    django_generic_flatblocks/contrib/gblocks/migrations/*
    django_generic_flatblocks/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/django-generic-flatblocks
